sample/web/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: webapp
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
